--- a/app/src/main/res/layout-v28/list_of_item.xml
+++ b/app/src/main/res/layout-v28/list_of_item.xml
@@ -13,6 +13,8 @@
         android:padding="16dp"
         >
 
+
+
         <ImageView
             android:id="@+id/picture"
             android:layout_width="wrap_content"
@@ -36,38 +38,12 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-black"
-            android:padding="16dp"
-            android:text="@string/name1"
+
             android:textAppearance="?attr/textAppearanceHeadline5"
+            android:text="@string/nama1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/picture" />
 
-        <TextView
-            android:id="@+id/person_bike"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Yamaha"
-            android:textAppearance="?attr/textAppearanceBody1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/person_name" />
-
-        <TextView
-            android:id="@+id/person_DOB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="1994-12-04"
-            android:textAppearance="?attr/textAppearanceBody1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/person_bike" />
-
-        <TextView
-            android:id="@+id/person_height"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="177 cm"
-            android:textAppearance="?attr/textAppearanceBody1"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/person_DOB" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
